<resources>
    <string name="app_name">Checkout System</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="item_image">Item Image</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="name">Name</string>
    <string name="checkout">Checkout</string>
    <string name="grand_total">Grand Total</string>
    <string name="cart_total">Cart Total</string>
    <string name="delivery_fee">Delivery Fee</string>
    <string name="delivery_information">Delivery Information</string>
    <string name="address">Address</string>
    <string name="optionals">Optionals</string>
    <string name="optional_services_charges">$5.0 +</string>
    <string name="fast_delivery">Fast Delivery</string>
    <string name="multiple_packaging">Multiple Packaging</string>
    <string name="recyclable_bags">Recyclable Bags</string>
    <string name="contact_number">Contact</string>
    <string name="place_order">Place Order</string>
    <string name="delivery_charges">$10.0</string>
    <string name="total_cart_amount">$2950.0</string>
    <string name="amount_grand_total">$2960.0</string>
    <string name="err_empty_field">Field cannot be empty</string>
</resources>
